# Fluent-Multi-Logger

./: Readme.md  main.py  requirements.txt  setup.cfg
fluent_multi_log.egg-info/: PKG-INFO  SOURCES.txt
src/: AnotherLog.py  AnotherOneLog.py  AppLog.py  Log.py  Pipfile
src/fluent_multi_log.egg-info/: SOURCES.txt
tests/: test_AnotherLog.py  test_AnotherOneLog.py  test_AppLog.py
