[metadata]
name=fluent_multi_log
version=0.0.1
description=A fluent multi log project
long_description=file:README.md
long_description_content_type=text/markdown
keywords=logger,fluent
license=
classifiers=
ProgrammingLanguage::Python::3
author=Jorgeley
author_email=jorgeley@gmail.com
install_requires=
"pytest>=5.*"

[options]
python_requires=>=3
package_dir=
 =.
packages=find:

[options.packages.find]
where=src

[tool:pytest]
addopts=--verbose
python_files=tests/*.py
